--- a/Simplicity.cabal
+++ b/Simplicity.cabal
@@ -240,7 +240,7 @@ executable GenPrimitive
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    hs-source-dirs:   Haskell-GenerateC
+    hs-source-dirs:   Haskell-Generate
     default-language: Haskell2010
     build-depends:    Simplicity,
                       base >=4.9 && <4.16,
@@ -258,7 +258,7 @@ executable GenTests
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    hs-source-dirs:   Haskell-GenerateC
+    hs-source-dirs:   Haskell-Generate
     default-language: Haskell2010
     build-depends:    Simplicity,
                       base >=4.9 && <4.16,
